tests/ucc/type/good/ptr-type-alias-1.c
typedef int u;

int main(void)
{
    u *a;
    int *c;

    c = a;

    return 0;
}
