tests/ucc/type/bad/typedef-vs-union-vs-int.c
typedef union a
{
    int a;
} my_union;

int main(void)
{
    my_union a = 1;

    return 0;
}
